[gd_scene load_steps=3 format=3]

[ext_resource path="res://scripts/world/missions/mission_cold_verge_oxygen_run.gd" type="Script" id=1]

[node name="MissionColdVergeOxygenRun" type="Node3D"]
script = ExtResource( 1 )

[node name="StartTrigger" type="Area3D" parent="."]
[node name="StartTrigger/CollisionShape3D" type="CollisionShape3D" parent="StartTrigger"]
shape = BoxShape3D.new()

[node name="ObjectiveOxygenCacheA" type="Area3D" parent="."]
[node name="ObjectiveOxygenCacheA/CollisionShape3D" type="CollisionShape3D" parent="ObjectiveOxygenCacheA"]
shape = BoxShape3D.new()

[node name="ObjectiveOxygenCacheB" type="Area3D" parent="."]
[node name="ObjectiveOxygenCacheB/CollisionShape3D" type="CollisionShape3D" parent="ObjectiveOxygenCacheB"]
shape = BoxShape3D.new()

[node name="ExtractionZone" type="Area3D" parent="."]
[node name="ExtractionZone/CollisionShape3D" type="CollisionShape3D" parent="ExtractionZone"]
shape = BoxShape3D.new()

[node name="EnemySpawnPoints" type="Node3D" parent="."]
[node name="EnemySpawnPoints/Spawn_Breather_01" type="Marker3D" parent="EnemySpawnPoints"]
[node name="EnemySpawnPoints/Spawn_AshEater_01" type="Marker3D" parent="EnemySpawnPoints"]

[node name="OxygenDrainTick" type="Timer" parent="."]
wait_time = 3.0
autostart = false

[node name="ColdDamageTick" type="Timer" parent="."]
wait_time = 4.0
autostart = false

[node name="BreatherSpawnTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = false

[node name="EnemySpawnPoints/Spawn_Breather_01" type="Marker3D" parent="EnemySpawnPoints"]


